# indesign-to-something

./: .gitignore  README.md  extract_physics.py  pom.xml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: ASTDetailPanel.tsx  ASTTreePanel.tsx  ConversionPanel.tsx  ExtractPage.tsx  FileSelector.tsx  ImagePreviewPanel.tsx  InventoryView.tsx  LayoutDetailPanel.tsx  PlaygroundPage.tsx
desktop/src/stores/: useAppStore.ts  useAstStore.ts  useExtractStore.ts  usePlaygroundStore.ts
desktop/src/types/: index.ts
docs/: intermediate-schema.json  intermediate-schema.md  refactoring-plan.md
src/test/java/kr/dogfoot/hwpxlib/: Test.java
testFile/idml/math-1/: math-1.hwpx  math-1.idml
testFile/idml/math-1/Document fonts/: AdobeFnt14.lst  AdobeFnt23.lst  AdobeFnt25.lst
testFile/idml/physics-1/: physics-1.idml
testFile/tool/: blank.hwpx  idml_2pages.hwpx  idml_converted_full.hwpx  idml_equations.hwpx  idml_few_pages.hwpx  idml_sample_p8_14_noimg.hwpx  idml_test_noimg.hwpx  sample_csat_math_2026.hwpx  sample_equations.hwpx  sample_image_clip.hwpx  sample_image_insert.hwpx  sample_image_layout.hwpx  sample_mathml_equations.hwpx  sample_mathml_grid.hwpx  sample_mathml_styled_grid.hwpx  sample_multi_section.hwpx  sample_paragraph_styles.hwpx  sample_rich_flow_pages.hwpx  sample_table_showcase.hwpx
(+151 files in other folders)
