[package]
name = "idml-to-hwpx"
version = "0.1.0"
edition = "2021"

[lib]
name = "idml_to_hwpx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "idml-to-hwpx"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
tokio = { version = "1", features = ["process", "io-util"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
